# handgesture

./: README.md  pyproject.toml
plugins/godot-desktop-pet/.codex-plugin/: plugin.json
plugins/godot-desktop-pet/skills/godot-desktop-pet/: SKILL.md
src/handgesture/: __init__.py  app.py  driver_game.py
tools/: generate_obstacle_assets.py
